--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,7 +1,7 @@
 .srfm-form-container {
 	// This is the parent form class. Adds specificity so that there is no conflict.
 	position: relative;
-	padding: 1em;
+	padding: 32px;
 	background-image: var( --srfm-bg-image );
 	background-size: cover;
 	background-position: center;
